--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 anyio==3.6.1
+Brotli==1.0.9
+certifi==2022.6.15
 click==8.1.3
-fastapi==0.79.0
+fastapi==0.79.1
 h11==0.13.0
 httptools==0.4.0
 idna==3.3
+mutagen==1.45.1
+pycryptodomex==3.15.0
 pydantic==1.9.2
 python-dotenv==0.20.0
 PyYAML==6.0
@@ -14,4 +18,4 @@ uvicorn==0.18.2
 uvloop==0.16.0
 watchfiles==0.16.1
 websockets==10.3
-youtube-dl==2021.12.17
+yt-dlp==2022.8.19
